# gpui-boilerplate

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/app/: Cargo.toml  build.rs
crates/app/resources/macos/: icon.icns
crates/app/resources/windows/: manifest.rc
crates/app/src/: main.rs
crates/app/src/app/: mod.rs  windows_only_instance.rs
crates/ui/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/tasks/: build.rs  mod.rs  pack.rs
