[package]
name = "ui"
version = "0.1.0"
description = "UI components crate"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
gpui.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
